# FlashWords

./: ButtonQuiz.qml  ButtonQuizImg.qml  ButtonQuizImgLarge.qml  ButtonTab.qml  CMakeLists.txt  CreateNewQuiz.qml  CrossWord.qml  DownLoad.qml  EditQuiz.qml  HangMan.qml  InputTextQuiz.qml  ListViewHi.qml  Main.qml  QuestionPanel.qml  QuestionPanelRect.qml  RectRounded.qml  Resource.rc  Script.nsi  TakeQuiz.qml  TextList.qml  TextListLarge.qml  WhiteText.qml  glosquiz.pro  imagepickerandroid.cpp  imagepickerandroid.h  main.cpp  qml.qrc
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
doc/: Jul franska.txt  doc.html  doc.txt
